--- a/styles/partials/welcomeSection/_welcomeSection.scss
+++ b/styles/partials/welcomeSection/_welcomeSection.scss
@@ -31,6 +31,12 @@
             color: colorSet(light-clr, pale-purple);
         }
 
+        & .heading{
+            @include laptop-desktops{
+                margin-left: -10px;
+            }
+        }
+
         & .subheading{
             font-weight: 400;
             line-height: 32px;
